# ros-robotics

./: README.md
hw_3_036/: CMakeLists.txt  package.xml  stopper.launch
hw_3_036/scripts/: stopper.py
hw_3_036/src/: Stopper.cpp  Stopper.h  run_stopper.cpp
part_1/: CMakeLists.txt  package.xml
part_1/scripts/: hakan.py  keles.py  listener.py  talker.py
part_1/src/: hakan.cpp  keles.cpp
part_2/: rosunit-consumer.xml  static_map.pgm  static_map.yaml
part_2/turtle_sim/: CMakeLists.txt  grid.txt  package.xml
part_2/turtle_sim/scripts/: load_map.py
part_2/turtle_sim/src/: load_map.cpp
simple_180201036_navigation_goals/: CMakeLists.txt  package.xml
simple_180201036_navigation_goals/src/: simple_navigation_goals.cpp
